--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,7 @@
 html {
-  font-size: 30px;
+  font-family;  Verdana, Helvetica;
+  background-color: Black;
+  text-align: center;
+  color: white;
+  
 }
-/*First Commit*/
