--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,5 +3,28 @@ html {
   background-color: Black;
   text-align: center;
   color: white;
-  
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: normal;
+}
+
+.istore {
+  font-size: 16px;
+  color: Aquamarine;
+}
+
+h2 {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+p {
+  font-size: 21px;
+  color: Gray;
+}
+
+.footer {
+  text-align: right;
 }
